--- a/frontend/src/Pages/CSS/Product.css
+++ b/frontend/src/Pages/CSS/Product.css
@@ -1,75 +1,24 @@
 .group-parent {
   display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  justify-content:space-evenly;
+  align-items: center;
   max-width: 100%; 
+  flex-direction: row;
 }
 
-.Prod,
-.P1{
-  position: absolute;
+.productdisplay-left{
+  display: flex;
+  flex-direction: column;
 }
-.Prod{
-  bottom: 0;
-  left: 0;
-  object-fit: cover;
-  margin-left: 2rem;
-  height: 50%;
-  width: 50%;
-}
-.P1{
-  /* top: 60px; */
-}
-.P1,
-.P2,
-.P3{
-  left: 770px;
-  width: 180px;
-  height: 270px;
-  object-fit: cover;
-  z-index: 1;
-}
-.P2{
-  position: absolute;
-  /* top: 350px; */
-}
-.P3{
-  /* top:640px */
-}
-.P3,
-.P4,
-.parent{
-  position: absolute;
-}
-.P4{
-  /* top: 930px; */
-  left: 770px;
-  width: 180px;
-  height: 270px;
-  object-fit: cover;
-  z-index: 1;
-}
-.parent{
-  height: 100%;
-  width: 100%;
-  margin: 0 !important;
-  /* top: 0; */
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.group{
-  height: 1260px;
-  flex: 1;
+
+.top-images{
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: relative;
-  min-width: 617px;
-  max-width: 100%;
 }
-
+.bottom-images{
+  display: flex;
+  flex-direction: row;
+}
 .productdisplay-right {
   margin: 0px 70px;
   display: flex;
@@ -104,12 +53,25 @@
   margin-bottom: 20px; /* Increased margin */
   margin-top: 20px;
   color: white;
+  display: flex;
+  flex-direction: row;
+  margin: 0 !important;
 }
 
-.productdisplay-right-size h1{
-  margin-top: 55px;
+.desc-text{
+  color: white;
+  font-size: 16px;
+  padding-right: 25px;
   font-weight: 600;
-  font-size: 20px;
+}
+.description{
+  color: white;
+  font-size: 16px;
+}
+.productdisplay-right-size h1{
+  font-weight: 600;
+  font-size: 16px;
+  padding-right: 25px;
   color: white;
 }
 
@@ -140,8 +102,15 @@ button {
   margin-bottom: 40px;
   border: none;
   outline: none;
+  width: 200px;
 }
 
+.buttons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 /* Add gap between elements */
 .productdisplay-right > * {
   margin-bottom: 20px; /* Increased margin */
@@ -185,31 +154,6 @@ button {
   color: white;
   margin-top: 10px; /* Increased margin */
   font-weight: bold; /* Increase font weight */
-}
-
-.img_large {
-  width: 100%;
-  height: 880px !important;
-  border-radius: 10px;
-}
-
-.img_overlay{
-  height: 150px !important;
-  width: 100px !important;
-  margin-left: 1570px;
-  margin-top: 20px;
-}
-
-.overlay_col{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  width: 200px;
-  gap: 50px;
-  position: sticky;
-  z-index: 1;
 }
 
 /* Media queries for responsiveness */
